Moblie Device complete w/ links

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <body>
     <header class="main-header">
-      <h1 class="title">Megan Oliver</h1>
+      <h1 class="title" id="megan">Megan Oliver</h1>
       <ul class="main-nav">
-        <li <a href="#">HOME</a></li>
-        <li <a href="#">PORTFOLIO</a></li>
-        <li <a href="#">CONTACT</a></li>
+        <li><a href="#">HOME</a></li>
+        <li> <a href="#portfolio">PORTFOLIO</a></li>
+        <li> <a href="#contact">CONTACT</a></li>
     </header>
     <div>
 
@@ -25,7 +25,7 @@
       </div>
 
       <div class="clearfix">
-        <h2>PORTFOLIO</h2>
+        <h2 id="portfolio">PORTFOLIO</h2>
         <div class="portfolio">
           <img src="images/portfolio-1.png" alt="Marketing Page">
           <h3>Marketing Page</h3>
@@ -62,15 +62,15 @@
         </div>
       </div>
       <div class="contact">
-        <h3>CONTACT</h3>
+        <h3 id="contact">CONTACT</h3>
         <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
         <p id="phone"> Phone (503)957-0295</p>
         <p id="email"> Email rms.moliver@gmail.com</p>
       </div>
     </div>
     <footer class="main-footer">
-      <h3>Megan Oliver</h3>
-      <h3 id="top">Back to Top</h3>
+      <h3 id="name">Megan Oliver</h3>
+      <h3 id="top"><a href="#megan">Back to Top</a></h3>
     </footer>
   </body>
 </html>
