--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <h1 class="title" id="megan">Megan Oliver</h1>
       <ul class="main-nav">
-        <li><a href="#">HOME</a></li>
+        <li><a href="#megan">HOME</a></li>
         <li> <a href="#portfolio">PORTFOLIO</a></li>
         <li> <a href="#contact">CONTACT</a></li>
     </header>
@@ -71,6 +71,10 @@
     <footer class="main-footer">
       <h3 id="name">Megan Oliver</h3>
       <h3 id="top"><a href="#megan">Back to Top</a></h3>
+      <ul id="footer-nav">
+        <li><a href="#megan">HOME</a></li>
+        <li> <a href="#portfolio">PORTFOLIO</a></li>
+        <li> <a href="#contact">CONTACT</a></li>
     </footer>
   </body>
 </html>
