Xtra credit work added
Still need to change fonts and fix "contacts" to center??

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h1 class="title" id="megan">Megan Oliver</h1>
       <ul class="main-nav">
         <li><a href="#megan">HOME</a></li>
-        <li> <a href="#portfolio">PORTFOLIO</a></li>
-        <li> <a href="#contact">CONTACT</a></li>
-    </header>
-    <div>
+        <li><a href="#skills">SKILLS</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
 
+    </header>
       <div class="introduction" class="clearfix">
         <img src="images/hamster.jpg" ref="Picture of Megan Oliver" id="profile-pic">
         <p>
@@ -24,7 +24,19 @@
         </p>
       </div>
 
-      <div class="clearfix">
+      <div class="skills" class="clearfix">
+        <h2 id="skills">Skills</h2>
+        <p>I have worked hard to improve on several web designing skills through my Treehouse courses. I am especially proud of my work with HTML and CSS coding. See the websites below for some of my best work.</p>
+        <div class="skills-img">
+          <img src="images/portfolio-14.png" alt="Classroom Website">
+        </div>
+        <div class="skills-img">
+          <img src="images/portfolio-11.png" alt="Restaurant Website">
+        </div>
+
+
+      </div>
+      <div class="main-portfolio" class="clearfix">
         <h2 id="portfolio">PORTFOLIO</h2>
         <div class="portfolio">
           <img src="images/portfolio-1.png" alt="Marketing Page">
@@ -60,12 +72,11 @@
           <h3>Calculator</h3>
           <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
         </div>
-      </div>
-      <div class="contact">
-        <h3 id="contact">CONTACT</h3>
+      <div class="contact" class="clearfix">
+        <h2 id="contact">CONTACT</h2>
         <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-        <p id="phone"> Phone (503)957-0295</p>
-        <p id="email"> Email rms.moliver@gmail.com</p>
+        <p id="phone"> Phone: (503)957-0295</p>
+        <p id="email"> Email: rms.moliver@gmail.com</p>
       </div>
     </div>
     <footer class="main-footer">
@@ -73,8 +84,9 @@
       <h3 id="top"><a href="#megan">Back to Top</a></h3>
       <ul id="footer-nav">
         <li><a href="#megan">HOME</a></li>
-        <li> <a href="#portfolio">PORTFOLIO</a></li>
-        <li> <a href="#contact">CONTACT</a></li>
+        <li><a href="#skills">SKILLS</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
     </footer>
   </body>
 </html>
