--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <div class="introduction" class="clearfix">
-      <img src="images/hamster.jpg" ref="Picture of Megan Oliver" id="profile-pic">
+      <img src="Images/hamster.jpg" ref="Picture of Megan Oliver" id="profile-pic">
       <p>
           Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
       </p>
@@ -28,10 +28,10 @@
         <h2 id="skills">Skills</h2>
         <p>I have worked hard to improve on several web designing skills through my Treehouse courses. I am especially proud of my work with HTML and CSS coding. See the websites below for some of my best work.</p>
         <div class="skills-img">
-          <img src="images/portfolio-14.png" alt="Classroom Website">
+          <img src="Images/portfolio-14.png" alt="Classroom Website">
         </div>
         <div class="skills-img">
-          <img src="images/portfolio-11.png" alt="Restaurant Website">
+          <img src="Images/portfolio-11.png" alt="Restaurant Website">
         </div>
 
 
@@ -39,36 +39,36 @@
       <div class="main-portfolio" class="clearfix">
         <h2 id="portfolio">PORTFOLIO</h2>
         <div class="portfolio">
-          <img src="images/portfolio-1.png" alt="Marketing Page">
+          <img src="Images/portfolio-1.png" alt="Marketing Page">
           <h3>Marketing Page</h3>
           <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
         </div>
 
         <div class="portfolio">
-          <img src="images/portfolio-2.png" alt="Search Page">
+          <img src="Images/portfolio-2.png" alt="Search Page">
           <h3>Search Page</h3>
           <p>This project searches through a specific database to find information that the user is trying to look up.</p>
         </div>
 
         <div class="portfolio">
-          <img src="images/portfolio-3.png" alt="Travel App">
+          <img src="Images/portfolio-3.png" alt="Travel App">
           <h3>Travel App</h3>
           <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
         </div>
         <div class="portfolio">
-          <img src="images/portfolio-6.png" alt="Map of Favorite Spots">
+          <img src="Images/portfolio-6.png" alt="Map of Favorite Spots">
           <h3>Map of Favorite Spots</h3>
           <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
         </div>
 
         <div class="portfolio">
-          <img src="images/portfolio-5.png" alt="Photo Gallery">
+          <img src="Images/portfolio-5.png" alt="Photo Gallery">
           <h3>Photo Gallery</h3>
           <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
         </div>
 
         <div class="portfolio">
-          <img src="images/portfolio-4.png" alt="Calculator">
+          <img src="Images/portfolio-4.png" alt="Calculator">
           <h3>Calculator</h3>
           <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
         </div>
