--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <header class="main-header">
+    <header class="main-header" class="clearfix">
       <h1 class="title" id="megan">Megan Oliver</h1>
-      <ul class="main-nav">
+      <ul class="main-nav" class="clearfix">
         <li><a href="#megan">HOME</a></li>
         <li><a href="#skills">SKILLS</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -18,7 +18,7 @@
     </header>
 
     <div class="introduction" class="clearfix">
-      <img src="Images/profile-pic.jpg" ref="Picture of Megan Oliver" id="profile-pic">
+      <img src="Images/profile-pic.jpg" ref="Picture of Megan Oliver" id="profile-pic" class="clearfix">
       <p>
           Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
       </p>
