Fixing the mobile layout

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <font 
   </head>
 
   <body>
     <header class="main-header" class="clearfix">
       <h1 class="title" id="megan">Megan Oliver</h1>
-      <ul class="main-nav" class="clearfix">
-        <li><a href="#megan">HOME</a></li>
-        <li><a href="#skills">SKILLS</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+      <nav>
+        <ul class="main-nav" class="clearfix">
+          <li><a href="#megan">HOME</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+      </nav>
     </header>
 
     <div class="introduction" class="clearfix">
@@ -82,11 +84,14 @@
     <footer class="main-footer">
       <h3 id="name">Megan Oliver</h3>
       <h3 id="top"><a href="#megan">Back to Top</a></h3>
-      <ul id="footer-nav">
-        <li><a href="#megan">HOME</a></li>
-        <li><a href="#skills">SKILLS</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+      <nav>
+        <ul id="footer-nav">
+          <li><a href="#megan">HOME</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
