--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="introduction" class="clearfix">
-      <img src="Images/profile-pic.jpg" ref="Picture of Megan Oliver" id="profile-pic" class="clearfix">
+      <img src="Images/profile-pic.jpg" alt="Picture of Megan Oliver" id="profile-pic" class="clearfix">
       <p>
           Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
       </p>
