Corrected class html error and width issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Megan Oliver's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <header class="main-header" class="clearfix">
+    <header class="main-header clearfix">
       <h1 class="title" id="megan">Megan Oliver</h1>
       <nav>
-        <ul class="main-nav" class="clearfix">
+        <ul class="main-nav clearfix">
           <li><a href="#megan">HOME</a></li>
           <li><a href="#skills">SKILLS</a></li>
           <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -20,14 +20,14 @@
       </nav>
     </header>
 
-    <div class="introduction" class="clearfix">
+    <div class="introduction clearfix">
       <img src="Images/profile-pic.jpg" alt="Picture of Megan Oliver" id="profile-pic" class="clearfix">
       <p>
           Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
       </p>
     </div>
 
-    <div class="skills" class="clearfix">
+    <div class="skills clearfix">
       <h2 id="skills">Skills</h2>
       <p>I have worked hard to improve on several web designing skills through my Treehouse courses. I am especially proud of my work with HTML and CSS coding. See the websites below for some of my best work.</p>
       <div class="skills-img">
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-      <div class="main-portfolio" class="clearfix">
+      <div class="main-portfolio clearfix">
         <h2 id="portfolio">PORTFOLIO</h2>
         <div class="portfolio">
           <img src="Images/portfolio-1.png" alt="Marketing Page">
@@ -74,7 +74,7 @@
           <h3>Calculator</h3>
           <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
         </div>
-      <div class="contact" class="clearfix">
+      <div class="contact clearfix">
         <h2 id="contact">CONTACT</h2>
         <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
         <p id="phone"> Phone: (503)957-0295</p>
